<resources>
    <string name="app_name">MobileCourse</string>
    <!-- Strings related to login -->
    <string name="invalid_name">At least 3 characters</string>
    <string name="invalid_phone">Enter a valid phone number</string>
    <string name="invalid_password">Between 8+ alphanumeric characters</string>
    <string name="invalid_email">Enter a valid email address</string>
    <string name="validate_email_password">Please validate your email and password</string>
    <string name="login_success">Oh! You are so crappy today, success</string>
    <string name="login_failed">Authentication failed.</string>
    <string name="DB_read_failed">The read failed: </string>
    <string name="Welcome">Welcome \u0020</string>
    <string name="registration_success">Registration success</string>
    <string name="database_failure">registration failed in database</string>
    <string name="registration_failed">Registration failed</string>
    <string name="failed">Sorry, failed</string>
    <string name="no_connection">"No Internet Connection"</string>
    <string name="user_avatar">user_avatar</string>
    <string name="load_button">load_button</string>
    <string name="new_username">new_username</string>
    <string name="edit_button">edit_button</string>
    <string name="new_email">new_email</string>
    <string name="sign_out_btn">sign_out_btn</string>
    <string name="failure">failed</string>
    <string name="img_load_succes">Well done! Image loaded</string>
    <string name="email_update_s">Well done! Email is updated</string>
    <string name="email_update_fail">Fuck! Email is not updated ^(</string>
    <string name="invalid_new_email">email is bad)</string>
    <string name="user_name_update_success">Well done! Name updated</string>
    <string name="user_name_update_fail">Fuck! Name is not updated</string>
    <string name="movies">Movies</string>
    <string name="tab2">Tab2</string>
    <string name="profile">Profile</string>
    <string name="icon_2">Icon</string>


</resources>
