<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="24dp"
    android:paddingRight="24dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp">
        <LinearLayout
            android:background="@color/primary_dark"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:orientation="vertical">
            <ImageView
                android:layout_marginTop="45dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:contentDescription="@string/user_avatar"
                android:id="@+id/fragment_profile_user_avatar_image_view"/>
            <Button
                android:id="@+id/fragment_profile_load_user_avatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/load_button" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginTop="20dp">
        <LinearLayout
            android:orientation="horizontal"
            android:paddingLeft="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/email"/>

            <TextView
                android:id="@+id/fragment_profile_email_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="20dp"
                android:textStyle="bold" />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="25dp"
            android:orientation="horizontal"
            android:paddingLeft="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/fragment_profile_edit_email_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/edit_button"
                android:textColor="@color/white" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fragment_profile_edit_email_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/new_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fragment_profile_edit_email_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="25dp"
            android:orientation="horizontal"
            android:paddingLeft="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/name"/>

            <TextView
                android:id="@+id/fragment_profile_username_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="20dp"
                android:textStyle="bold" />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="25dp"
            android:orientation="horizontal"
            android:paddingLeft="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/fragment_profile_edit_username_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/edit_button"
                android:textColor="@color/white" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fragment_profile_edit_username_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/new_username">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fragment_profile_edit_username_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/fragment_profile_sign_out_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/sign_out_btn"/>
    </LinearLayout>
</ScrollView>